--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
 
 .app {
   position: relative;
+  max-width: 786px;
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 video {
